<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.decagon.android.sq007.UpdateContactDialogFragment">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fontFamily="sans-serif-medium"
    android:text="@string/edit_contact"
    android:textColor="@color/black"
    android:textSize="24sp"
    android:textAlignment="center"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_full"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_text_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_contact_phonenumber"
        android:inputType="number"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/button_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/update"
        android:textColor="@android:color/white"/>

</LinearLayout>